--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,63 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer base {
+    .section-title {
+        @apply text-2xl font-bold mb-4 text-center;
+    }
+
+    .section-subtitle {
+        @apply text-sm font-normal text-center mb-4;
+    }
+
+    .section {
+        @apply flex flex-col justify-center items-center pb-20;
+    }
+
+    .accordion-root {
+        @apply bg-gray-50 rounded-md w-full shadow-[0_2px_10px] shadow-black/5
+    }
+
+    .accordion-item {
+        @apply  first:rounded-t-md first:border-b-2 last:rounded-b-md border-b-2 overflow-hidden focus-within:relative focus-within:z-10 focus-within:shadow-[0_0_0_2px]
+    }
+    
+    .accordion-trigger {
+        @apply p-5 hover:bg-gray-100  flex items-center justify-between text-[15px] w-full
+    }
+
+    .accordion-title {
+        @apply text-lg font-bold capitalize
+    }
+
+    /* .accordion-content {
+        @apply  
+    } */
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.section-subtitle {
+    max-width: 85%;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.unselectable {
+    pointer-events: none;
+}
+
+@keyframes slideDown {
+    from {
+        height: 0;
+    }
+    to {
+        height: var(--radix-accordion-content-height);
+    }
+}
+
+@keyframes slideUp {
+    from {
+        height: var(--radix-accordion-content-height);
+    }
+    to {
+        height: 0;
+    }
 }
