style: remove most placeholder content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@
     }
 
     .accordion-title {
-        @apply text-lg font-bold capitalize
+        @apply text-lg font-bold 
     }
 
     /* .accordion-content {
