--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,16 +13,16 @@
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
  
-    --primary: 27, 96%, 61%;
+    --primary: 27 96% 61%;
     --primary-foreground: 0 0% 100%;
  
-    --secondary: 213, 97%, 87%;
+    --secondary: 213 97% 87%;
     --secondary-foreground: 222.2 47.4% 11.2%;
  
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
  
-    --accent: 226, 57%, 21%;
+    --accent: 226 57% 21%;
     --accent-foreground: 0 0% 100%;
  
     --destructive: 0 84.2% 60.2%;
@@ -45,7 +45,7 @@
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
  
-    --primary: 27, 96%, 61%;
+    --primary: 27 96% 61%;
     --primary-foreground: 222.2 47.4% 11.2%;
  
     --secondary: 217.2 32.6% 17.5%;
