--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,11 +75,19 @@
   }
 
   .section-title {
-    @apply text-3xl font-bold text-left lg:text-4xl;
+    @apply text-5xl mobileS:text-4xl  text-gray-900 tracking-wide font-semibold;
 }
 
 .section-subtitle {
-    @apply text-sm font-normal text-left lg:text-xl;
+    @apply text-xl/8 text-gray-700;
+}
+
+.section-description {
+    @apply text-base/7 text-gray-700;
+}
+
+.list-title {
+    @apply text-2xl/8 font-bold tracking-wide text-gray-900;
 }
 
 }
