feat: add new pages for partnerships and courses

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,7 +68,13 @@
  
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border [&::-webkit-scrollbar]:w-2 md:[&::-webkit-scrollbar]:w-3
+  [&::-webkit-scrollbar-track]:rounded-full
+  [&::-webkit-scrollbar-track]:bg-slate-100
+  [&::-webkit-scrollbar-thumb]:rounded-full
+  [&::-webkit-scrollbar-thumb]:bg-slate-400
+  dark:[&::-webkit-scrollbar-track]:bg-neutral-700
+  dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500;
   }
   body {
     @apply bg-background text-foreground;
